--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     <script>
         // Replace this with your Linkvertise link
-        const linkvertiseUrl = "https://linkvertise.com/your-link-here";
+        const linkvertiseUrl = "https://link-hub.net/1219250/checkpoint";
 
         // Simulate the unique key generation (in a real scenario, this should come from a server)
         const generatedKey = "ABC123XYZ";
